--- a/Artificial neural network visualization.ipynb
+++ b/Artificial neural network visualization.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled18.ipynb",
+      "name": "Copie de Untitled18.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMjzurMsHD1m6fm9xmxk9Sn",
+      "authorship_tag": "ABX9TyNaxV9zQon0dGpJeYdDpkXA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
       "source": [
         "pip install keras "
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,7 +68,7 @@
       "source": [
         "pip install graphviz"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
       "source": [
         "!pip3 install ann_visualizer"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +112,7 @@
         "from graphviz import Source\n",
         "import numpy as np "
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -126,7 +126,7 @@
         "import matplotlib.pyplot as plt\n",
         " "
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
         "#training_data = np.array([[0,0],[0,1],[1,0],[1,1]], \"float32\")\n",
         "#target_data = np.array([[0],[1],[1],[0]], \"float32\")"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -153,7 +153,7 @@
         "model.add(Dense(1, input_dim = 2, activation=\"relu\"))\n",
         "#model.compile(loss='mean_squared_error', optimizer='adam')"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -164,7 +164,7 @@
       "source": [
         "ann_viz(model, title=\"Neural network visualization\",view=True)"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -181,7 +181,7 @@
         "graph_source = Source.from_file('network.gv')\n",
         "graph_source"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -210,7 +210,7 @@
       "source": [
         "model.get_weights()"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -236,6 +236,18 @@
           "execution_count": 67
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O-X7KnDmMfqH"
+      },
+      "source": [
+        "# Using keras tuner to create a Neural network depending on the inputs we have \n",
+        "https://keras-team.github.io/keras-tuner/"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
